# django-capacitacao

./: .gitignore  README.md  extensions.txt  manage.py  pyproject.toml
aplicacao/aplicacao/: asgi.py  settings.py  urls.py  wsgi.py
aplicacao_inicio/: asgi.py  settings.py  urls.py  wsgi.py
banco/: db.sqlite3
banco/banco/: settings.py  urls.py
banco/emprestimo/: models.py  views.py
banco/emprestimo/api/: serializers.py  urls.py  views.py
banco/emprestimo/migrations/: 0001_initial.py
banco/financiamento_de_veiculos/: .gitignore  apps.py  models.py
banco/financiamento_de_veiculos/api/: serializers.py  urls.py  views.py
banco/financiamento_de_veiculos/migrations/: 0001_initial.py
banco/financiamento_imovel/: apps.py  models.py
banco/financiamento_imovel/api/: serializers.py  urls.py  views.py
banco/financiamento_imovel/migrations/: 0001_initial.py
banco/financiamento_veiculos/: apps.py  models.py
banco/financiamento_veiculos/api/: serializers.py  urls.py  views.py
banco/financiamento_veiculos/migrations/: 0001_initial.py  0002_rename_financiamentoveiuclos_financiamentoveiculos.py
primeiro_app/: urls.py  views.py
vscode-settings/: extesionns.json
