[project]
name = "django-capacitacao"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RafaelAlvesTech", email = "rafaelpereiraalves@ufba.br"},
]
dependencies = [
    "django>=5.0.4",
    "djangorestframework>=3.15.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
